# KnowYourCharacter

./: .gitignore  CMakeLists.txt  README.md
include/matrix/: matrix.h
include/neuron/: activation.h  layer.h
src/: main  main.c  matrix.h
src/matrix/: matrix.h
src/neuron/: layer.h
